k8s/flask-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: talha-rasool-dev
spec:
  selector:
    app: flask
  ports:
    - port: 80
      targetPort: 5000
